--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <label for="">*Confirmar contraseña</label><br>
             <input type="password" required><br>
             
-            <label for="">*Fecha de nacimiento</label><br>
+            <label for="">PITO</label><br>
             <input type="date" required><br>
 
             <label for="">Localidad</label><br>
