--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,11 @@
 		<header role="banner" id="fh5co-header">
 			<div class="container">
 				<nav class="navbar navbar-default">
+					<a class="sakura-logo" href="index.html"> <img src="images/LogoFinal.svg" alt="Logo floristeriía" width="500" height="300"> </a>
 					<div class="row">
 						<div class="col-md-3">
 							<div class="fh5co-navbar-brand">
-								<a class="fh5co-logo" href="index.html">Narrow</a>
+								
 							</div>
 						</div>
 						<div class="col-md-9 main-nav">
@@ -79,7 +80,7 @@
 								<li><a href="index.html"><span>Inicio</span></a></li>
 								<li><a href="services.html">Packs</a></li>
 								<li><a href="product.html">Productos</a></li>
-								<li><a href="about.html">Encargos</a></li>
+								<li><a href="encargos.html">Encargos</a></li>
 								<li class="active"><a href="contact.html">Contacto</a></li>
 							</ul>
 						</div>
@@ -88,29 +89,30 @@
 		  </div>
 		</header>
 		<!-- END: header -->
-		<div id="fh5co-intro-section" class="section-overlay animate-box" data-animate-effect="fadeIn">
-			<div class="fh5co-intro-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/intro.jpg);">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2 float-overlay">
-							<h2>Contact Us</h2>
-							<h3>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</h3>
-						</div>
-					</div>
-				</div>
+
+		<div class="box-wrap">
+			
+			<div>
+				<img class="banner" src="images/BANNERCONTACTO.png" alt="Banner del apartado contactos">
 			</div>
-		</div>
+	</div>
+
 		<!-- END fh5co-intro-section -->
-		<div id="fh5co-contact-section">
+	
+			<br><br><br>
+		
+
 			<div class="container">
 				<div class="col-md-4 animate-box">
-					<h3 class="section-title">Our Address</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<h3 class="section-title">Nuestra dirección</h3>
+					<p>Bienvenidos a la floristería Sakura, donde sembramos alegría.
+						Les dejamos abajo la información para contactarnos
+					</p>
 					<ul class="contact-info">
-						<li><i class="icon-location-pin"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-						<li><i class="icon-phone2"></i>+ 1235 2355 98</li>
-						<li><i class="icon-mail"></i><a href="#">info@yoursite.com</a></li>
-						<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+						<li><i class="icon-location-pin"></i>C/Milagros N37 31023</li>
+						<li><i class="icon-phone2"></i>+34 987 456 734</li>
+						<li><i class="icon-mail"></i><a href="#">SakuraShop@gmail.com</a></li>
+						<li><i class="icon-globe2"></i><a href="index.html">SakuraShop.com</a></li>
 					</ul>
 				</div>
 				<div class="col-md-8 animate-box">
@@ -118,38 +120,38 @@
 						<div class="form-group row">
 							<div class="col-md-6 field">
 								<label for="firstname">First Name</label>
-								<input type="text" name="FName" id="firstname" class="form-control">
+								<input id="inputForm" type="text" name="FName" id="firstname" class="form-control">
 							</div>
 							<div class="col-md-6 field">
 								<label for="lastname">Last Name</label>
-								<input type="text" name="FName" id="lastname" class="form-control">
+								<input id="inputForm" type="text" name="FName" id="lastname" class="form-control">
 							</div>
 						</div>
 						<div class="form-group row">
 							<div class="col-md-6 field">
 								<label for="email">Email</label>
-								<input type="text" name="FName" id="email" class="form-control">
+								<input id="inputForm" type="text" name="FName" id="email" class="form-control">
 							</div>
 							<div class="col-md-6 field">
 								<label for="phone">Phone</label>
-								<input type="text" name="FName" id="phone" class="form-control">
+								<input id="inputForm" type="text" name="FName" id="phone" class="form-control">
 							</div>
 						</div>
 						<div class="form-group row">
 							<div class="col-md-12 field">
 								<label for="message">Message</label>
-								<textarea name="message" id="message" cols="30" rows="10" class="form-control"></textarea>
+								<textarea id="inputForm" name="message" id="message" cols="30" rows="10" class="form-control"></textarea>
 							</div>
 						</div>
 						<div class="form-group row">
 							<div class="col-md-12 field">
-								<input type="submit" id="submit" class="btn btn-primary" value="Send Message">
+								<input  type="submit" id="submit" class="btn btn-primary" value="Send Message">
 							</div>
 						</div>
 					</form>
 				</div>
 			</div>
-		</div>
+		
 		<div id="map" class="fh5co-map animate-box"></div>
 		<!-- END map -->
 		<footer>
