--- a/product.html
+++ b/product.html
@@ -6,11 +6,12 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Narrow &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Productos Floristería Sakura</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
+
 
   <!-- 
 	//////////////////////////////////////////////////////
@@ -68,10 +69,10 @@
 		<header role="banner" id="fh5co-header">
 			<div class="container">
 				<nav class="navbar navbar-default">
+					<a class="sakura-logo" href="index.html"> <img src="images/LogoFinal.svg" alt="Logo floristeriía" width="500" height="300"> </a>
 					<div class="row">
 						<div class="col-md-3">
 							<div class="fh5co-navbar-brand">
-								<a class="fh5co-logo" href="index.html">Narrow</a>
 							</div>
 						</div>
 						<div class="col-md-9 main-nav">
@@ -79,7 +80,7 @@
 								<li><a href="index.html"><span>Inicio</span></a></li>
 								<li><a href="services.html">Packs</a></li>
 								<li class="active"><a href="product.html">Productos</a></li>
-								<li><a href="about.html">Encargos</a></li>
+								<li><a href="encargos.html">Encargos</a></li>
 								<li><a href="contact.html">Contacto</a></li>
 							</ul>
 						</div>
@@ -88,64 +89,111 @@
 		  </div>
 		</header>
 		<!-- END: header -->
-		<div id="fh5co-intro-section" class="section-overlay animate-box" data-animate-effect="fadeIn">
-			<div class="fh5co-intro-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/intro.jpg);">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2 float-overlay">
-							<h2>Our Products</h2>
-							<h3>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</h3>
-						</div>
-					</div>
-				</div>
+			
+			<div>
+				<img class="banner" src="images/BANNERPRODUCTOS.png" alt="bannerFloral">
 			</div>
-		</div>
+
+			<br>
+		<h3 style="margin-left: 40px;">Ofrecemos una amplia gama de productos para satisfacer sus deseos. 
+			<br> Todas nuestras flores son cuidadosamente seleccionadas y se aseguran de ofrecer la mejor calidad y frescura.</h3>
+	
 		<!-- END fh5co-intro-section -->
-		<div id="fh5co-product-section">
-			<div class="container">
-				<div class="row">
-					<div class="product-inner">
-						<div class="col-md-4 animate-box">
-							<div class="desc">
-								<h3><a href="#">Product Title</a></h3>
-								<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							</div>
-						</div>
-						<div class="col-md-8 animate-box">
-							<figure>
-								<a href="#"><img class="img-responsive" src="images/product-2.jpg" alt="product"></a>
-							</figure>
+
+		<div class="container" style="margin-top: 40px;">
+			<div class="row">
+
+				  <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+					<h3 class="card-title" style="color: #645f5f;"> <strong>Magnolias</strong></h3>
+					<div class="card" style="width: 18rem;">
+						<img class="card-img-top" src="images/magnolia-2156716_640.jpg" alt="Magnolias" style="width: 300px; height:300px;  border-radius: 50px;">
+						<div class="card-body" style="margin-top: 10px;">
+						  <a href="#" class="btn btn-primary" style="margin-top: 10px; background-color: #645f5f;">Comprar</a>
 						</div>
 					</div>
-					<div class="product-inner">
-						<div class="col-md-4 col-md-push-8 animate-box">
-							<div class="desc">
-								<h3><a href="#">Product Title</a></h3>
-								<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							</div>
-						</div>
-						<div class="col-md-8 col-md-pull-4 animate-box">
-							<figure>
-								<a href="#"><img class="img-responsive" src="images/product-3.jpg" alt="product"></a>
-							</figure>
+				  </div>
+
+				  <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+					<h3 class="card-title" style="color:  #645f5f;"> <strong>Rosas</strong></h3>
+					<div class="card" style="width: 18rem;">
+						<img class="card-img-top" src="images/rosa.jpg" alt="rosas" style="width: 300px; height: 300px; border-radius: 50px; ">
+						<div class="card-body" style="margin-top: 10px;">
+						  <a href="#" class="btn btn-primary" style="margin-top: 10px; background-color:  #645f5f;">Comprar</a>
 						</div>
 					</div>
-					<div class="product-inner">
-						<div class="col-md-4 animate-box">
-							<div class="desc">
-								<h3><a href="#">Product Title</a></h3>
-								<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+				  </div>
+					  
+					  <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<h3 class="card-title"  style="color:  #645f5f;"> <strong>Flores de cerezo</strong></h3>
+						<div class="card" style="width: 18rem;">
+							<img class="card-img-top" src="images/cherry-1216721_640.jpg" alt="lirios" style="width: 300px; height: 300px;  border-radius: 50px; ">
+							<div class="card-body" style="margin-top: 10px;">
+							  <a href="#" class="btn btn-primary" style="margin-top: 10px; background-color:  #645f5f;">Comprar</a>
 							</div>
 						</div>
-						<div class="col-md-8 animate-box">
-							<figure>
-								<a href="#"><img class="img-responsive" src="images/product-4.jpg" alt="product"></a>
-							</figure>
+					  </div>
+
+					  <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" style="margin-top: 30px;">
+						<h3 class="card-title"  style="color:  #645f5f;"> <strong>Bonsai</strong></h3>
+						<div class="card" style="width: 18rem;">
+							<img class="card-img-top" src="images/bonsai-3125715_640.jpg" alt="lirios" style="width: 300px; height: 300px;  border-radius: 50px; ">
+							<div class="card-body" style="margin-top: 10px;">
+							  <a href="#" class="btn btn-primary" style="margin-top: 10px; background-color:  #645f5f;">Comprar</a>
+							</div>
+						</div>
+					  </div>
+
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" style="margin-top: 30px;">
+						<h3 class="card-title"  style="color:  #645f5f;"> <strong>Hortensias</strong></h3>
+						<div class="card" style="width: 18rem;">
+							<img class="card-img-top" src="images/bloom-759343_640.jpg" alt="lirios" style="width: 300px; height: 300px;  border-radius: 50px; ">
+							<div class="card-body" style="margin-top: 10px;">
+							  <a href="#" class="btn btn-primary" style="margin-top: 10px; background-color: rgb(114, 93, 93)";>Comprar</a>
+							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-		</div>
+
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" style="margin-top: 30px;">
+						<h3 class="card-title"  style="color:  #645f5f;"> <strong>Orquídeas</strong></h3>
+						<div class="card" style="width: 18rem;">
+							<img class="card-img-top" src="images/flower-3097458_640.jpg" alt="Orquídeas" style="width: 300px; height: 300px;  border-radius: 50px; ">
+							<div class="card-body" style="margin-top: 10px;">
+							  <a href="#" class="btn btn-primary" style="margin-top: 10px; background-color:  #645f5f;">Comprar</a>
+							</div>
+						</div>
+					  </div>
+
+					  <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" style="margin-top: 30px;">
+						<h3 class="card-title"  style="color:  #645f5f;"> <strong>Higanbana</strong></h3>
+						<div class="card" style="width: 18rem;">
+							<img class="card-img-top" src="images/amaryllis-1242713_640.jpg" alt="Higanbana" style="width: 300px; height: 300px;  border-radius: 50px; ">
+							<div class="card-body" style="margin-top: 10px;">
+							  <a href="#" class="btn btn-primary" style="margin-top: 10px; background-color:  #645f5f;">Comprar</a>
+							</div>
+						</div>
+					  </div>
+
+					  <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" style="margin-top: 30px;">
+						<h3 class="card-title"  style="color:  #645f5f;"> <strong>Crisantemo</strong></h3>
+						<div class="card" style="width: 18rem;">
+							<img class="card-img-top" src="images/chrysanthemum-5262413_640.jpg" alt="Higanbana" style="width: 300px; height: 300px;  border-radius: 50px; ">
+							<div class="card-body" style="margin-top: 10px;">
+							  <a href="#" class="btn btn-primary" style="margin-top: 10px; background-color:  #645f5f;">Comprar</a>
+							</div>
+						</div>
+					  </div>
+
+					  <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" style="margin-top: 30px;">
+						<h3 class="card-title"  style="color: rgb(114, 93, 93)"> <strong>Camelias</strong></h3>
+						<div class="card" style="width: 18rem;">
+							<img class="card-img-top" src="images/camellia-1883336_640.jpg" alt="Camelias" style="width: 300px; height: 300px;  border-radius: 50px; ">
+							<div class="card-body" style="margin-top: 10px;">
+							  <a href="#" class="btn btn-primary" style="margin-top: 10px; background-color:  #645f5f;">Comprar</a>
+							</div>
+						</div>
+					</div>
+			  </div>
+			  
 		<footer>
 			<div id="footer" class="fh5co-border-line">
 				<div class="container">
