--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Narrow &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Packs Floristería Sakura</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -68,10 +68,10 @@
 		<header role="banner" id="fh5co-header">
 			<div class="container">
 				<nav class="navbar navbar-default">
+					<a class="sakura-logo" href="index.html"> <img src="images/LogoFinal.svg" alt="Logo floristeriía" width="500" height="300"> </a>
 					<div class="row">
 						<div class="col-md-3">
-							<div class="fh5co-navbar-brand">
-								<a class="fh5co-logo" href="index.html">Narrow</a>
+							<div class="fh5co-navbar-brand">	
 							</div>
 						</div>
 						<div class="col-md-9 main-nav">
@@ -79,7 +79,7 @@
 								<li><a href="index.html"><span>Inicio</span></a></li>
 								<li class="active"><a href="services.html">Packs</a></li>
 								<li><a href="product.html">Productos</a></li>
-								<li><a href="about.html">Encargos</a></li>
+								<li><a href="encargos.html">Encargos</a></li>
 								<li><a href="contact.html">Contacto</a></li>
 							</ul>
 						</div>
@@ -88,76 +88,68 @@
 		  </div>
 		</header>
 		<!-- END: header -->
-		<div id="fh5co-intro-section" class="section-overlay animate-box" data-animate-effect="fadeIn">
-			<div class="fh5co-intro-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/intro.jpg);">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2 float-overlay">
-							<h2>Our Services</h2>
-							<h3>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</h3>
-						</div>
-					</div>
-				</div>
-			</div>
+		<div>
+			<img class="banner" src="images/BANNERPACKS.png" alt="bannerFloral">
 		</div>
+		<br>				
 		<!-- END fh5co-intro-section -->
-		<div id="fh5co-section">
+		<div id="fh5co-product-section">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-10 col-md-offset-1">
-						<div class="col-md-6 animate-box">
-							<div class="fh5co-inner fh5co-services">
-								<i class="icon-heart"></i>
-								<div class="holder-section">
-									<h3>Crafted With Love</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-								</div>
+					<div class="product-inner">
+						<div class="col-md-4 animate-box">
+							<div class="desc" style="margin-right: 15px;">
+								<h3 ><a style="color: palevioletred;" href="#"> <u> PACK DEL AMOR </u></a></h3>
+								<p style="color: rgb(105, 0, 32);">Nuestro paquete de flores del amor es perfecto para sorprender a esa persona especial en tu vida. Incluye un ramo de 12 rosas rojas de tallo largo, cuidadosamente seleccionadas por nuestros expertos floristas por su belleza y frescura. <br> El color rojo de las rosas simboliza la atracción, la pasión, el deseo y la fuerza del sentimiento amoroso, por lo que este ramo es el regalo perfecto para expresar el amor hacia tu pareja.</p>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box">
-							<div class="fh5co-inner fh5co-services">
-								<i class="icon-laptop"></i>
-								<div class="holder-section">
-									<h3>Web Developement</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-								</div>
+						<div class="col-md-8 animate-box">
+							<figure>
+								<a href="#"><img class="img-responsive" src="images/LOVE.jpg"  height="100px" width="700px" alt="product" style="border-radius: 80px;"></a>
+							</figure>
+						</div>
+					</div>
+					<div class="product-inner">
+						<div class="col-md-4 col-md-push-8 animate-box">
+							<div class="desc" style="margin-left: 15px;">
+								<h3><a href="#" style="color: rgb(182, 191, 8);"> <u> PACK DE LA AMISTAD </u> </a></h3>
+								<p style="color: rgb(144, 130, 4);">Nuestro paquete de flores de la amistad es la manera perfecta de celebrar a esa persona especial en tu vida que ha sido un amigo o amiga leal y confiable. Incluye un hermoso ramo de 12 rosas amarillas de tallo largo, cuidadosamente seleccionadas por nuestros expertos floristas por su belleza y frescura. <br> El color amarillo de las rosas simboliza la amistad, la alegría y la felicidad, por lo que este ramo es el regalo perfecto para expresar tu gratitud y aprecio por tu amigo o amiga.
+
+									Además, añadimos una tarjeta de felicitación personalizada en la que puedes escribir un mensaje especial para demostrar tu afecto y amistad.</p>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box">
-							<div class="fh5co-inner fh5co-services">
-								<i class="icon-video"></i>
-								<div class="holder-section">
-									<h3>Video Editing</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-								</div>
+						<div class="col-md-8 col-md-pull-4 animate-box">
+							<figure>
+								<a href="#"><img class="img-responsive" src="images/AMIGUIS.jpg"  height="850px" width="900px" alt="product" style="border-radius: 80px;"></a>
+							</figure>
+						</div>
+					</div>
+					<div class="product-inner">
+						<div class="col-md-4 animate-box">
+							<div class="desc">
+								<h3><a href="#"><u>PACK DESCANSA EN PAZ</u> </a></h3>
+								<p style="color: black;">Nuestro paquete de flores es la manera perfecta de honrar a tus seres queridos que ya no están con nosotros. Incluye un hermoso ramo de 12 rosas blancas de tallo largo, cuidadosamente seleccionadas por nuestros expertos floristas por su belleza y frescura. <br> El color blanco de las rosas simboliza la paz, la tranquilidad y el recuerdo, por lo que este ramo es el regalo perfecto para honrar la memoria de tus seres queridos.</p>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box">
-							<div class="fh5co-inner fh5co-services">
-								<i class="icon-mobile"></i>
-								<div class="holder-section">
-									<h3>Mobile Optimization</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-								</div>
+						<div class="col-md-8 animate-box">
+							<figure>
+								<a href="#"><img class="img-responsive" src="images/DEP.jpg" height="850px" width="900px" alt="product"  style="border-radius: 80px;"></a>
+							</figure>
+						</div>
+					</div>
+					<div class="product-inner">
+						<div class="col-md-4 col-md-push-8 animate-box">
+							<div class="desc">
+								<h3><a href="#" style="color: blue;"> <u> PACK DE TEMPORADA </u></a></h3>
+								<p style="color: rgb(0, 0, 124);">Nuestro paquete incluye una selección de las flores más bellas y frescas que están en temporada. Esto significa que tendrás una combinación única de colores y texturas que variará durante las distintas épocas del año, haciéndolo un detalle único y especial. <br>
+
+									Nuestro equipo de floristas profesionales creará un hermoso arreglo con estas flores de temporada.</p>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box">
-							<div class="fh5co-inner fh5co-services">
-								<i class="icon-gears"></i>
-								<div class="holder-section">
-									<h3>Search Engine Optimization</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box">
-							<div class="fh5co-inner fh5co-services">
-								<i class="icon-piechart"></i>
-								<div class="holder-section">
-									<h3>Web Marketing</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-								</div>
-							</div>
+						<div class="col-md-8 col-md-pull-4 animate-box">
+							<figure>
+								<a href="#"><img class="img-responsive" src="images/TEMPORADA.jpg" height="850px" width="900px" alt="product"  style="border-radius: 80px;"></a>
+							</figure>
 						</div>
 					</div>
 				</div>
