--- a/services.html
+++ b/services.html
@@ -77,8 +77,8 @@
 						<div class="col-md-9 main-nav">
 							<ul class="nav text-right">
 								<li><a href="index.html"><span>Inicio</span></a></li>
-								<li class="active"><a href="services.html">Packs</a></li>
 								<li><a href="product.html">Productos</a></li>
+								<li class="active"><a href="services.html">Packs</a></li>
 								<li><a href="encargos.html">Encargos</a></li>
 								<li><a href="contact.html">Contacto</a></li>
 							</ul>
@@ -90,8 +90,15 @@
 		<!-- END: header -->
 		<div>
 			<img class="banner" src="images/BANNERPACKS.png" alt="bannerFloral">
+			<div style="margin-left: 20px;">
+				<audio controls>
+					<source src="audios/Thony-Packs.mp3" type="audio/wav">
+					Audio no soportado
+				</audio>
+			</div>
 		</div>
 		<br>				
+		
 		<!-- END fh5co-intro-section -->
 		<div id="fh5co-product-section">
 			<div class="container">
@@ -105,7 +112,7 @@
 						</div>
 						<div class="col-md-8 animate-box">
 							<figure>
-								<a href="#"><img class="img-responsive" src="images/LOVE.jpg"  height="100px" width="700px" alt="product" style="border-radius: 80px;"></a>
+								<a href="#"><img class="img-responsive" src="images/LOVE.jpg"  height="100px" width="700px" alt="ramo de rosas rojo" style="border-radius: 80px;"></a>
 							</figure>
 						</div>
 					</div>
@@ -120,7 +127,7 @@
 						</div>
 						<div class="col-md-8 col-md-pull-4 animate-box">
 							<figure>
-								<a href="#"><img class="img-responsive" src="images/AMIGUIS.jpg"  height="850px" width="900px" alt="product" style="border-radius: 80px;"></a>
+								<a href="#"><img class="img-responsive" src="images/AMIGUIS.jpg"  height="850px" width="900px" alt="roma de rosas amarillas" style="border-radius: 80px;"></a>
 							</figure>
 						</div>
 					</div>
@@ -133,7 +140,7 @@
 						</div>
 						<div class="col-md-8 animate-box">
 							<figure>
-								<a href="#"><img class="img-responsive" src="images/DEP.jpg" height="850px" width="900px" alt="product"  style="border-radius: 80px;"></a>
+								<a href="#"><img class="img-responsive" src="images/DEP.jpg" height="850px" width="900px" alt="ramo de rosas blancas"  style="border-radius: 80px;"></a>
 							</figure>
 						</div>
 					</div>
@@ -148,29 +155,28 @@
 						</div>
 						<div class="col-md-8 col-md-pull-4 animate-box">
 							<figure>
-								<a href="#"><img class="img-responsive" src="images/TEMPORADA.jpg" height="850px" width="900px" alt="product"  style="border-radius: 80px;"></a>
+								<a href="#"><img class="img-responsive" src="images/TEMPORADA.jpg" height="850px" width="900px" alt="ramos de flores variadas"  style="border-radius: 80px;"></a>
 							</figure>
 						</div>
 					</div>
 				</div>
 			</div>
+			<br>
+			<footer>
+				<div class="col-md-6 col-md-offset-3 text-center">
+					<p class="fh5co-social-icons">
+						<a href="#"><i class="icon-twitter-with-circle"></i></a>
+						<a href="#"><i class="icon-facebook-with-circle"></i></a>
+						<a href="#"><i class="icon-instagram-with-circle"></i></a>
+					</p>
+	
+					<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">licencia de Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional</a>
+					
+					<!-- <p>Copyright 2016 Free Html5 <a href="#">Narrow</a>. All Rights Reserved. <br>Made with <i class="icon-heart3 love"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a></p> -->
+					
+				</div>		
+			</footer>
 		</div>
-		<footer>
-			<div id="footer" class="fh5co-border-line">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 text-center">
-							<p>Copyright 2016 Free Html5 <a href="#">Narrow</a>. All Rights Reserved. <br>Made with <i class="icon-heart3 love"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
-							<p class="fh5co-social-icons">
-								<a href="#"><i class="icon-twitter-with-circle"></i></a>
-								<a href="#"><i class="icon-facebook-with-circle"></i></a>
-								<a href="#"><i class="icon-instagram-with-circle"></i></a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</footer>
 	</div>
 	<!-- END: box-wrap -->
 	
