--- a/encargos.html
+++ b/encargos.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Narrow &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Encargos Floristería Sakura</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -81,8 +81,8 @@
 						<div class="col-md-9 main-nav">
 							<ul class="nav text-right">
 								<li><a href="index.html"><span>Inicio</span></a></li>
-								<li><a href="services.html">Packs</a></li>
 								<li><a href="product.html">Productos</a></li>
+								<li><a href="services.html">Packs</a></li>
 								<li class="active"><a href="encargos.html">Encargos</a></li>
 								<li><a href="contact.html">Contacto</a></li>
 							</ul>
@@ -100,13 +100,19 @@
 					</div>
 		</div>
 		<!-- END fh5co-intro-section -->
+		<div style="margin-left: 20px;">
+			<audio controls>
+				<source src="audios/Gonzalo-encargos.mp3" type="audio/wav">
+				Audio no soportado
+			</audio>
+		</div>
 
 	<div class="container" >
 		<br>
 		<h4 style="margin-left: 40px;">Gracias por hacer su pedido con nosotros. Por favor, complete el siguiente formulario con sus datos de contacto y detalles del pedido. Nos aseguraremos de procesar su solicitud lo antes posible y le mantendremos informado sobre el estado de su pedido. Si tiene alguna pregunta o necesita asistencia, 
 			no dude en ponerse en contacto con nosotros. ¡Gracias por elegirnos!</h4>
-		
-	 <form id="FormEncargos" action="" method="" >
+		<div class="col-md-6">
+	 	<form id="FormEncargos" action="" method="" >
 		<label for="nombre" >Nombre</label>
 		<br>
 		<input id="inputForm" type="text" name="nombre" required>
@@ -133,12 +139,20 @@
 		<br>
 		<br>
 
+		<label>Indique los productos que desea y la cantidad de cada uno</label>
+		<div class="input-group">
+			<span class="input-group-text">Pedido</span>
+			<textarea class="form-control" aria-label="With textarea"  placeholder="Ejemplo: Ramo de 3 orquideas y 2 crisantemos" required></textarea>
+			
+		  </div>
+		  <br>
+
 		<label>¡Introduzca el mensaje para su tarjeta de regalo!</label>
 		<div class="input-group">
 			<span class="input-group-text">Tarjeta de regalo</span>
 			<textarea class="form-control" aria-label="With textarea"  placeholder="Te envio este regalo para florarte la semana"></textarea>
-			
-		  </div>
+		</div>
+
 		  <br>
 		<div class="form-check">
 			<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -167,9 +181,34 @@
 		  </div>
 
 		  <br>
-		  <button class="btn btn-success" type="submit" id="send">Hacer pedido</button> <br> <br>
+		  <button class="btn btn-success" type="submit" id="send">Hacer pedido</button> 
 		  <button class="btn btn-danger" type="reset" id="cancel">Borrar</button>  
 	 </form>
+	</div>
+	<div class="col-md-6">
+		<div>
+			
+			<video controls style="width: 115%; border-radius: 20px;" alt="video de la entrega de un pedido">
+				<source src="images/reparto.mp4" type="audio/mp4">
+			</video>
+			<medium style="color: rgb(114, 93, 93)">Entrega de un pedido <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="pink" class="bi bi-flower3" viewBox="0 0 16 16">
+				<path d="M11.424 8c.437-.052.811-.136 1.04-.268a2 2 0 0 0-2-3.464c-.229.132-.489.414-.752.767C9.886 4.63 10 4.264 10 4a2 2 0 1 0-4 0c0 .264.114.63.288 1.035-.263-.353-.523-.635-.752-.767a2 2 0 0 0-2 3.464c.229.132.603.216 1.04.268-.437.052-.811.136-1.04.268a2 2 0 1 0 2 3.464c.229-.132.489-.414.752-.767C6.114 11.37 6 11.736 6 12a2 2 0 1 0 4 0c0-.264-.114-.63-.288-1.035.263.353.523.635.752.767a2 2 0 1 0 2-3.464c-.229-.132-.603-.216-1.04-.268zM9 4a1.468 1.468 0 0 1-.045.205c-.039.132-.1.295-.183.484a12.88 12.88 0 0 1-.637 1.223L8 6.142a21.73 21.73 0 0 1-.135-.23 12.88 12.88 0 0 1-.637-1.223 4.216 4.216 0 0 1-.183-.484A1.473 1.473 0 0 1 7 4a1 1 0 1 1 2 0zM3.67 5.5a1 1 0 0 1 1.366-.366 1.472 1.472 0 0 1 .156.142c.094.1.204.233.326.4.245.333.502.747.742 1.163l.13.232a21.86 21.86 0 0 1-.265.002 12.88 12.88 0 0 1-1.379-.06 4.214 4.214 0 0 1-.51-.083 1.47 1.47 0 0 1-.2-.064A1 1 0 0 1 3.67 5.5zm1.366 5.366a1 1 0 0 1-1-1.732c.001 0 .016-.008.047-.02.037-.013.087-.028.153-.044.134-.032.305-.06.51-.083a12.88 12.88 0 0 1 1.379-.06c.09 0 .178 0 .266.002a21.82 21.82 0 0 1-.131.232c-.24.416-.497.83-.742 1.163a4.1 4.1 0 0 1-.327.4 1.483 1.483 0 0 1-.155.142zM9 12a1 1 0 0 1-2 0 1.476 1.476 0 0 1 .045-.206c.039-.131.1-.294.183-.483.166-.378.396-.808.637-1.223L8 9.858l.135.23c.241.415.47.845.637 1.223.083.19.144.352.183.484A1.338 1.338 0 0 1 9 12zm3.33-6.5a1 1 0 0 1-.366 1.366 1.478 1.478 0 0 1-.2.064c-.134.032-.305.06-.51.083-.412.045-.898.061-1.379.06-.09 0-.178 0-.266-.002l.131-.232c.24-.416.497-.83.742-1.163a4.1 4.1 0 0 1 .327-.4c.046-.05.085-.086.114-.11.026-.022.04-.03.041-.032a1 1 0 0 1 1.366.366zm-1.366 5.366a1.494 1.494 0 0 1-.155-.141 4.225 4.225 0 0 1-.327-.4A12.88 12.88 0 0 1 9.74 9.16a22 22 0 0 1-.13-.232l.265-.002c.48-.001.967.015 1.379.06.205.023.376.051.51.083.066.016.116.031.153.044l.048.02a1 1 0 1 1-1 1.732zM8 9a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+			  </svg> </medium>
+		</div>
+	</div>
+	<div class="col-md-6 col-md-offset-3 text-center">
+		<p class="fh5co-social-icons">
+			<a href="#"><i class="icon-twitter-with-circle"></i></a>
+			<a href="#"><i class="icon-facebook-with-circle"></i></a>
+			<a href="#"><i class="icon-instagram-with-circle"></i></a>
+		</p>
+
+		<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">licencia de Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional</a>
+		
+		<!-- <p>Copyright 2016 Free Html5 <a href="#">Narrow</a>. All Rights Reserved. <br>Made with <i class="icon-heart3 love"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a></p> -->
+		
+	</div>		
+	</div>
 	</div>
 		
 		<!-- <div id="fh5co-section">
@@ -248,20 +287,7 @@
 		</footer>
 	</div> -->
 
-	<div id="footer" class="fh5co-border-line">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 text-center">
-					<p>Copyright 2016 Free Html5 <a href="#">Narrow</a>. All Rights Reserved. <br>Made with <i class="icon-heart3 love"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a></p>
-					<p class="fh5co-social-icons">
-						<a href="#"><i class="icon-twitter-with-circle"></i></a>
-						<a href="#"><i class="icon-facebook-with-circle"></i></a>
-						<a href="#"><i class="icon-instagram-with-circle"></i></a>
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
+
 	<!-- END: box-wrap -->
 	
 	<!-- jQuery -->
