--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 							<div class="col-md-9 main-nav">
 							<ul class="nav text-right">
 								<li class="active"><a href="index.html"><span>Inicio</span></a></li>
-								<li><a href="services.html">Packs</a></li>
 								<li><a href="product.html">Productos</a></li>
+								<li><a href="services.html">Packs</a></li>
 								<li><a href="encargos.html">Encargos</a></li>
 								<li><a href="contact.html">Contacto</a></li>
 							</ul>
@@ -89,20 +89,32 @@
 				</nav>
 		  </div>
 		</header>
+			<div class="row ">
+				<div class="col text-center">
+					<h3 class="estilo_titulo"> Floristería Sakura </h3>
+				</div>
+				<div style="margin-left: 20px;">
+					<audio controls>
+						<source src="audios/Pablo-Inicio.wav" type="audio/wav">
+						Audio no soportado
+					</audio>
+				</div>
+			</div>
+
+			
+		
 		<!-- END: header -->
 		<div class="owl-carousel owl-carousel1 owl-carousel-fullwidth fh5co-light-arrow animate-box" data-animate-effect="fadeIn">
 			<div class="item"><a href="images/Flores - 113004.mp4" class="image-popup"><video  autoplay loop src="images/Flores - 113004.mp4" width="100%"></video></a></div>
-			<div class="item"><a href="images/img_large_2.jpg" class="image-popup"><img src="images/img_large_2.jpg" alt="image"></a></div>
-			<div class="item"><a href="images/img_large_3.jpg" class="image-popup"><img src="images/img_large_3.jpg" alt="image"></a></div>
-			<div class="item"><a href="images/img_large_4.jpg" class="image-popup"><img src="images/img_large_4.jpg" alt="image"></a></div>
-			<div class="item"><a href="images/img_large_5.jpg" class="image-popup"><img src="images/img_large_5.jpg" alt="image"></a></div>
+			<div class="item"><a href="images/flowers-823655_1280.jpg" class="image-popup"><img src="images/flowers-823655_1280.jpg" alt="image"></a></div>
+			<div class="item"><a href="images/cherry-blossoms-5000242_1280.jpg" class="image-popup"><img src="images/cherry-blossoms-5000242_1280.jpg" alt="image"></a></div>
+			<div class="item"><a href="images/cherry-blossoms-4069596_1280.jpg" class="image-popup"><img src="images/cherry-blossoms-4069596_1280.jpg" alt="image"></a></div>
+			<div class="item"><a href="images/japanese-cherry-blossoms-6125088_1280.jpg" class="image-popup"><img src="images/japanese-cherry-blossoms-6125088_1280.jpg" alt="image"></a></div>
 		</div>
-		<div id="fh5co-media-section">
 			<div class="container">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section">
-						<h3>Floristería Sakura </h3>
-						<p>Bienvenides a nuestra floristería, donde creamos arreglos florales únicos y personalizados para cada ocasión especial. Desde bodas hasta funerales, nuestro equipo de floristas altamente capacitados utiliza las flores más frescas y de la mejor calidad para crear hermosos arreglos que transmiten el mensaje perfecto. 
+						<p style="color:black;">Bienvenides a nuestra floristería, donde creamos arreglos florales únicos y personalizados para cada ocasión especial. Desde bodas hasta funerales, nuestro equipo de floristas altamente capacitados utiliza las flores más frescas y de la mejor calidad para crear hermosos arreglos que transmiten el mensaje perfecto. 
 						<br> <br> Además, ofrecemos servicios de entrega a domicilio para que pueda disfrutar de nuestras flores en cualquier lugar y en cualquier momento. ¡Visítenos hoy para descubrir cómo podemos hacer de su día un poco más brillante con un hermoso ramo de flores!</p>
 					</div>
 				</div>
