--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		
 		<!-- END: header -->
 		<div class="owl-carousel owl-carousel1 owl-carousel-fullwidth fh5co-light-arrow animate-box" data-animate-effect="fadeIn">
-			<div class="item"><a href="images/Flores - 113004.mp4" class="image-popup"><video  autoplay loop src="images/Flores - 113004.mp4" width="100%"></video></a></div>
+			<div class="item"><a href="images/Flores - 113004.mp4" class="image-popup"><video  autoplay loop src="images/Flores.mp4" width="100%"></video></a></div>
 			<div class="item"><a href="images/flowers-823655_1280.jpg" class="image-popup"><img src="images/flowers-823655_1280.jpg" alt="image"></a></div>
 			<div class="item"><a href="images/cherry-blossoms-5000242_1280.jpg" class="image-popup"><img src="images/cherry-blossoms-5000242_1280.jpg" alt="image"></a></div>
 			<div class="item"><a href="images/cherry-blossoms-4069596_1280.jpg" class="image-popup"><img src="images/cherry-blossoms-4069596_1280.jpg" alt="image"></a></div>
