--- a/contact.html
+++ b/contact.html
@@ -125,11 +125,11 @@
 					<form action="#">
 						<div>
 							<div >
-								<label for="firstname">First Name</label>
+								<label for="firstname">Nombre</label>
 								<input id="inputForm" type="text" name="FName" id="firstname" class="form-control">
 							</div>
 							<div>
-								<label for="lastname">Last Name</label>
+								<label for="lastname">Apellidos</label>
 								<input id="inputForm" type="text" name="FName" id="lastname" class="form-control">
 							</div>
 						</div>
@@ -139,13 +139,13 @@
 								<input id="inputForm" type="text" name="FName" id="email" class="form-control">
 							</div>
 							<div>
-								<label for="phone">Phone</label>
+								<label for="phone">Teléfono</label>
 								<input id="inputForm" type="text" name="FName" id="phone" class="form-control">
 							</div>
 						</div>
 						<div>
 							<div>
-								<label for="message">Message</label>
+								<label for="message">Mensaje</label>
 								<textarea rows="4" cols="70" id="inputForm" name="message" id="message" cols="30" rows="10" class="form-control"></textarea>
 							</div>
 						</div>
@@ -153,7 +153,7 @@
 						
 						<div class="form-group row">
 							<div class="col-md-12 field">
-								<input id="botonTh" type="submit" id="submit" class="btn btn-primary" value="Send Message">
+								<input id="botonTh" type="submit" id="submit" class="btn btn-primary" value="Enviar mensaje">
 							</div>
 						</div>
 					</form>
